    this build dependency is fulfilled by build-essential. (Closes:
    #747982)
  * Updated to Standards-Version 3.9.5.
  * Use wildcard function of make instead of relying on shell for path
    expansion.
  * Honor hardening flags.
  * Fix of mingw-w64 warnings concerning out of bounds array access.
  * Deploy variables for path names in debian/rules.
  * Upgraded to debhelper version 9.

 -- Thomas Gaugler <thomas@dadie.net>  Sun, 18 May 2014 19:15:54 +0200

nsis (2.46-7) unstable; urgency=low

  * Make plugins not depend on libgcc_s_sjlj-1.dll nor libdtdc++-6.dll
    by forcing static compilation of both libgcc and libstdc++. (Closes:
    #654380)

 -- Didier Raboud <odyx@debian.org>  Thu, 05 Jan 2012 19:06:42 +0100

nsis (2.46-6) unstable; urgency=low

  * Corrected command line options passed to scons for build/NEWS target.
  * Use zmemcpy function of the same calling convention. 

 -- Thomas Gaugler <thomas@dadie.net>  Fri, 07 Oct 2011 10:28:21 +0200

nsis (2.46-5) unstable; urgency=low

  * Add Replaces/Breaks against nsis to the new packages (Closes: #630620)

 -- Thomas Gaugler <thomas@dadie.net>  Sat, 18 Jun 2011 16:41:54 +0000

nsis (2.46-4) unstable; urgency=low

  [ Thomas Gaugler ]
  * Run architecture independent build process only when demanded.
  * Split NSIS package into four packages:
    - compiler and utilities (architecture dependent)
    - plugins, stubs and resource files (win32)
    - header and library files for developing NSIS plugins (win32)
    - examples and HTML documentation (architecture independent)
  * Updated to Standards-Version 3.9.2
  * Support building with mingw-w64 (Closes: #620099)
  * Support parallel build 

  [ Didier Raboud ]
  * Don't hide output from scons in clean.
  * Move packaging from Subversion to Git, update Vcs-* fields.
  * Add explicit libstdc++6-4.6-dev Build-Depend.

 -- Thomas Gaugler <thomas@dadie.net>  Sat, 11 Jun 2011 15:24:40 +0000

nsis (2.46-3) experimental; urgency=low
